Update fcrepo-search-impl/src/main/java/org/fcrepo/search/impl/DbSearchIndexImpl.java
Co-authored-by: Ben Pennell <ben.pennell@gmail.com>